--- a/templates/listar_rateios.html
+++ b/templates/listar_rateios.html
@@ -19,6 +19,8 @@
         </div>
     </form>
 
+    {% set total_percentual = rateios | sum(attribute='percentual') %}
+
     <!-- Tabela de rateios -->
     <div class="table-responsive">
         <table id="rateios-table" class="table table-bordered table-hover align-middle">
@@ -61,6 +63,15 @@
                 </tr>
                 {% endfor %}
             </tbody>
+
+            <!-- Rodapé com total de % Energia -->
+            <tfoot>
+                <tr>
+                    <th colspan="3" class="text-end">Total Rateio:</th>
+                    <th>{{ total_percentual|round(2) }}%</th>
+                    <th colspan="3"></th>
+                </tr>
+            </tfoot>
         </table>
     </div>
 
