--- a/templates/relatorio_financeiro_com_perda.html
+++ b/templates/relatorio_financeiro_com_perda.html
@@ -143,7 +143,6 @@
     </div>
 
     {% if relatorio %}
-    <!-- Tabela com Perda incluída -->
     <div class="table-responsive mb-5">
         <h4 class="text-center text-success">Geração, Injeção, Perda e Consumo</h4>
         <table class="table table-bordered table-striped align-middle text-center table-consolidada-print">
@@ -154,7 +153,7 @@
                 <th>Geração (kWh)</th>
                 <th>Injeção (kWh)</th>
                 <th>Perda (kWh)</th>
-                <th>Perda (%)</th>  <!-- nova coluna -->
+                <th>Perda (%)</th> 
                 <th>Compensação (kWh)</th>
             </tr>
             </thead>
@@ -219,7 +218,6 @@
                     <th>Crédito na Usina (kWh)</th>
                     <th>Crédito nas Unidades (kWh)</th>
                     <th>À recuperar</th>
-
                 </tr>
             </thead>
             <tbody>
@@ -239,7 +237,6 @@
                         <span class="ms-1">{{ a_recuperar | formato_kwh }}</span>
                     {% endif %}
                     </td>
-
                 </tr>
                 {% endfor %}
             </tbody>
@@ -266,8 +263,7 @@
                 <tr>
                     <td>{{ item.usina_nome }}</td>
                     <td style="white-space: nowrap;">{{ item.faturado_total | formato_brasileiro }}</td>
-                    <td>{{ item.payback_percentual }}%</td>
-                    
+                    <td>{{ item.payback_percentual }}%</td>                    
                     <td>{{ item.eficiencia }}%</td>
                 </tr>
                 {% endfor %}
