--- a/templates/relatorio_cliente.html
+++ b/templates/relatorio_cliente.html
@@ -53,8 +53,8 @@
                     <th class="text-end">kWh/mês Injetado</th>
                     <th class="text-end">kWh/mês Consumido</th>
                     <th class="text-end">Média 6M (kWh/mês)</th>  {# NOVA COLUNA #}
-                    <th class="text-end">Diferença (kWh)</th>
-                    <th class="text-end">Diferença (%)</th>
+                    <th class="text-end">Diferença Injetado/ Consumo (kWh)</th>
+                    <th class="text-end">Diferença Injetado/ Consumo (%)</th>
                     <th class="text-end">Economia (R$)</th>
                     <th class="text-end">Economia Acumulada (R$)</th>
                     <th class="text-end">Saldo na Unidade (kWh)</th>
