Nova aba em gestão

--- a/templates/index.html
+++ b/templates/index.html
@@ -136,6 +136,9 @@
                         <div class="col-md-4">
                             <a href="{{ url_for('listar_injecoes_mensais') }}" class="btn btn-outline-primary w-100">Cadastrar Injeção</a>
                         </div>
+                        <div class="col-md-4">
+                            <a href="{{ url_for('relatorio_cliente') }}" class="btn btn-outline-primary w-100">Relatório</a>
+                        </div>
                     </div>
                 </div>
             </div>
