Atualização no relatório de monitoramento

--- a/templates/geracao_inversor.html
+++ b/templates/geracao_inversor.html
@@ -120,7 +120,7 @@
               <tr>
                 <th>Inversor</th>
                 <th>Potência (kW)</th>
-                <th>eToday (kWh)</th>
+                <th>Geração (kWh)</th>
               </tr>
             </thead>
             <tbody>
