--- a/templates/cadastrar_usina.html
+++ b/templates/cadastrar_usina.html
@@ -25,6 +25,15 @@
                         <input type="number" step="0.01" name="potencia" id="potencia" class="form-control" required>
                     </div>
 
+                    <div class="col-md-12 mt-3">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="tusd_fio_b" name="tusd_fio_b" value="1">
+                            <label class="form-check-label" for="tusd_fio_b">
+                                TUSD Fio B
+                            </label>
+                        </div>
+                    </div>
+
                     <div class="mb-3">
                         <label for="saldo_kwh" class="form-label">Saldo Atual (kWh)</label>
                         <input type="text" class="form-control" id="saldo_kwh" name="saldo_kwh" placeholder="Ex: 1500.75">
