--- a/templates/editar_previsoes.html
+++ b/templates/editar_previsoes.html
@@ -52,6 +52,17 @@
                     value="{{ usina.saldo_kwh or '' }}" placeholder="Ex: 1200.50">
             </div>
 
+            <div class="col-md-12 mt-2">
+                <!-- hidden para garantir envio quando desmarcado -->
+                <input type="hidden" name="tusd_fio_b" value="0">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="tusd_fio_b" name="tusd_fio_b" value="1"
+                        {% if usina.tusd_fio_b %}checked{% endif %}>
+                    <label class="form-check-label" for="tusd_fio_b">
+                        TUSD Fio B
+                    </label>
+                </div>
+            </div>
             <!-- Logo atual -->
             {% if usina.logo_url %}
                 <div class="col-md-6">
