--- a/templates/cadastrar_usina.html
+++ b/templates/cadastrar_usina.html
@@ -26,13 +26,18 @@
                     </div>
 
                     <div class="col-md-12 mt-3">
-                        <div class="form-check">
+                        <div class="form-check form-check-inline">
+                            <input type="hidden" name="tusd_fio_b" value="0">
                             <input class="form-check-input" type="checkbox" id="tusd_fio_b" name="tusd_fio_b" value="1">
-                            <label class="form-check-label" for="tusd_fio_b">
-                                TUSD Fio B
-                            </label>
+                            <label class="form-check-label" for="tusd_fio_b">TUSD Fio B</label>
                         </div>
-                    </div>
+
+                        <div class="form-check form-check-inline">
+                            <input type="hidden" name="boleto_proprio" value="0">
+                            <input class="form-check-input" type="checkbox" id="boleto_proprio" name="boleto_proprio" value="1">
+                            <label class="form-check-label" for="boleto_proprio">Boleto próprio?</label>
+                        </div>
+                        </div>
 
                     <div class="mb-3">
                         <label for="saldo_kwh" class="form-label">Saldo Atual (kWh)</label>
